Solve some issues: add alt to img, add overflow-wrap, remove dead code

--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -46,6 +46,8 @@
 }
 
 .article-tweet-text {
+  max-width: 95%;
+  overflow-wrap: break-word;
   font-weight: 75%;
   padding: 10px;
 }
